# mail-sort

./: Cargo.toml  install.sh
src/: config.rs  main.rs
