[package]
name = "mail-sort"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
imap = "3.0.0-alpha.15"
mailparse = "0.16.1"
pushover-rs = "0.3.21"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.14"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
